--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cli"
+name = "splight-cli"
 version = "4.4.0"
 description = "Splight Command Line Interface"
 authors = ["Splight Dev <dev@splight-ae.com>"]
@@ -31,7 +31,7 @@ pre-commit = "3.2.2"
 pytest = "^7.4.3"
 
 [tool.poetry.scripts]
-splight = "cli.cli:app"
+splight = "splight_cli.cli:app"
 
 [build-system]
 requires = ["poetry-core"]
