--- a/.github/workflows/developer.yaml
+++ b/.github/workflows/developer.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Get version from master branch
         run: |
           if [ -f "setup.py" ]; then
-            echo "MASTER_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
+            echo "MASTER_VERSION=$(grep -E 'version' splight_cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
           else
             echo "MASTER_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
           fi
@@ -39,7 +39,7 @@ jobs:
       - name: Get version from feature branch
         run: |
           if [ -f "setup.py" ]; then
-            echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
+            echo "CURRENT_VERSION=$(grep -E 'version' splight_cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
           else
             echo "CURRENT_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
           fi
@@ -67,7 +67,7 @@ jobs:
       - name: Get version from feature branch
         run: |
           if [ -f "setup.py" ]; then
-            echo "CURRENT_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
+            echo "CURRENT_VERSION=$(grep -E 'version' splight_cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
           else
             echo "CURRENT_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
           fi
