--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Get version from master branch
         run: |
           if [ -f "setup.py" ]; then
-            echo "MASTER_VERSION=$(grep -E 'version' cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
+            echo "MASTER_VERSION=$(grep -E 'version' splight_cli/version.py | awk -F'\"' '{ print $2 }')" >> "$GITHUB_ENV"
           else
             echo "MASTER_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
           fi
