--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "splight-cli"
-version = "4.4.0"
+version = "4.5.0.dev0"
 description = "Splight Command Line Interface"
 authors = ["Splight Dev <dev@splight-ae.com>"]
 readme = "README.md"
@@ -20,6 +20,7 @@ PyYAML = "6.0.1"
 rich = "13.0.1"
 pathspec = "0.11.1"
 packaging = "23.0"
+deepdiff = "6.3.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.3.0"
