--- a/.github/workflows/code-style.yaml
+++ b/.github/workflows/code-style.yaml
@@ -31,4 +31,4 @@ jobs:
       - name: Check Vulnerabilities
         run: |
           snyk code test
-          snyk test --severity-threshold=high
+          snyk test
