--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -92,7 +92,13 @@ jobs:
         run: npm install snyk -g
       - name: Authenticate Snyk
         run: snyk auth ${{ secrets.SNYK_API_KEY }}
-      - name: Check Vulnerabilities
+      - name: Create Snyk report
         run: |
-          snyk code test
-          snyk test --severity-threshold=high
+          mkdir .snyk_report
+          snyk code test --json > .snyk_report/snyk_code.json
+          snyk test --json > .snyk_report/snyk_dependencies.json
+          python3 .github/workflows/scripts/create_snyk_svg.py
+      - name: Publish Snyk report to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: .snyk_report/
