--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "splight-cli"
-version = "4.6.0"
+version = "5.0.0.dev1"
 description = "Splight Command Line Interface"
 authors = ["Splight Dev <dev@splight-ae.com>"]
 readme = "README.md"
@@ -22,6 +22,7 @@ pathspec = "0.11.1"
 packaging = "23.0"
 deepdiff = "6.3.1"
 mock = "^5.1.0"
+boto3 = "^1.34.16"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.3.0"
