--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,16 @@ case-converter = "1.1.0"
 click = "8.0.4"
 click-default-group = "1.2.2"
 setuptools = "60.9.3"
-splight-lib = "4.5.8"
+splight-lib = "4.6.5"
 py7zr = "0.20.8"
-typer = "0.7.0"
+typer = "0.9.0"
 colorama = "0.4.4"
 requests = "2.31.0"
 PyYAML = "6.0.1"
 rich = "13.0.1"
 pathspec = "0.11.1"
 packaging = "23.0"
+toposort = "^1.10"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.3.0"
