--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ rich = "13.0.1"
 pathspec = "0.11.1"
 packaging = "23.0"
 toposort = "^1.10"
+docker = "7.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.3.0"
