--- a/.github/workflows/developer.yaml
+++ b/.github/workflows/developer.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.8"
+          python-version: "3.11"
 
       # validate versions
       - name: Validates version is a dev version.
@@ -71,7 +71,10 @@ jobs:
           else
             echo "CURRENT_VERSION=$(grep version pyproject.toml | awk '{print $3}' | tr -d '\"')" >> "$GITHUB_ENV"
           fi
-
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
       - name: Setup poetry
         run: pip install poetry==1.7.0
 
