--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,10 @@ jobs:
     steps:
       - name: Checkout to feature branch
         uses: actions/checkout@v3
-
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
       - name: Setup poetry
         run: pip install poetry==1.7.0
 
