--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "splight-cli"
-version = "5.3.1"
+version = "5.3.2"
 description = "Splight Command Line Interface"
 authors = ["Splight Dev <dev@splight-ae.com>"]
 readme = "README.md"
@@ -11,8 +11,7 @@ case-converter = "1.1.0"
 click = "8.0.4"
 click-default-group = "1.2.2"
 setuptools = "70.0.0"
-# splight-lib = "^5.13.0"
-splight-lib = {path = "../splight-lib-python", develop=true}
+splight-lib = "^5.13.0"
 py7zr = "0.20.8"
 typer = "0.15.1"
 colorama = "0.4.4"
