--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,36 @@
-[tool.poetry]
+[project]
 name = "splight-cli"
-version = "5.3.3"
+version = "5.4.0"
 description = "Splight Command Line Interface"
-authors = ["Splight Dev <dev@splight-ae.com>"]
+authors = [
+    {name = "Splight Dev",email = "dev@splight-ae.com"}
+]
 readme = "README.md"
+requires-python = ">=3.11,<4.0.0"
+dependencies = [
+    "case-converter (==1.1.0)",
+    "click (==8.0.4)",
+    "click-default-group (==1.2.2)",
+    "setuptools (==70.0.0)",
+    "splight-lib (>=5.14.3,<6.0.0)",
+    "py7zr (==0.20.8)",
+    "typer (==0.15.1)",
+    "colorama (==0.4.4)",
+    "requests (==2.32.2)",
+    "pyyaml (==6.0.1)",
+    "rich (==13.0.1)",
+    "pathspec (==0.11.1)",
+    "packaging (==23.0)",
+    "toposort (>=1.10,<2.0)",
+    "docker (==7.1.0)"
+]
 
-[tool.poetry.dependencies]
-python = ">=3.11,<4"
-case-converter = "1.1.0"
-click = "8.0.4"
-click-default-group = "1.2.2"
-setuptools = "70.0.0"
-splight-lib = "^5.14.3"
-py7zr = "0.20.8"
-typer = "0.15.1"
-colorama = "0.4.4"
-requests = "2.32.2"
-PyYAML = "6.0.1"
-rich = "13.0.1"
-pathspec = "0.11.1"
-packaging = "23.0"
-toposort = "^1.10"
-docker = "7.1.0"
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[project.scripts]
+splight = "splight_cli.cli:app"
 
 [tool.poetry.group.dev.dependencies]
 black = "24.3.0"
@@ -34,13 +43,6 @@ pytest = "^7.4.3"
 coverage = "^7.3.2"
 mock = "^5.1.0"
 ruff = "^0.8"
-
-[tool.poetry.scripts]
-splight = "splight_cli.cli:app"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 79
