--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ pre-commit = "3.2.2"
 pytest = "^7.4.3"
 coverage = "^7.3.2"
 mock = "^5.1.0"
-ruff = "^0.8"
+ruff = "0.9.1"
 
 [tool.black]
 line-length = 79
