--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "requests==2.32.2",
     "rich==13.0.1",
     "setuptools==80.7.1",
-    "splight-lib>=5.19.8,<6.0.0",
+    "splight-lib>=5.21.0",
     "toposort>=1.10,<2.0",
     "typer==0.15.1",
 ]
